; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Str.c_JsonArrayAddUniStr.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Str.c_JsonArrayAddUniStr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @JsonArrayAddUniStr(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i8* @CopyUniToUtf(i32* %7)
  store i8* %8, i8** %6, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @JsonArrayAddStr(i32* %9, i8* %10)
  store i32 %11, i32* %5, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @Free(i8* %12)
  %14 = load i32, i32* %5, align 4
  ret i32 %14
}

declare dso_local i8* @CopyUniToUtf(i32*) #1

declare dso_local i32 @JsonArrayAddStr(i32*, i8*) #1

declare dso_local i32 @Free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
